decctools 0.1.3
---------------

* Disabled curl's validation of SSL certificate to pass CRAN (Windows) checks.
  Not ideal but I can't reproduce the problem on my Windows machine. 

decctools 0.1.2
---------------

* updated URL for LAD data

decctools 0.1.1
---------------

* fixed bug with file download routines

decctools 0.1.0
---------------

* initial release

* provides methods for accessing UK Dept of Energy and Climate Change statistics on energy consumption at local authority district, MSOA, and LSOA level.

* provides methods for accessing grid fuel mix and carbon intensity of electricity using Elexon's BM Reports data, as archived by the charity Renewable Energy Foundation