@@ -3,6 +3,7 @@ Type: Package
 Author: James Keirstead <j.keirstead@imperial.ac.uk>
 Maintainer: James Keirstead <j.keirstead@imperial.ac.uk>
 Version: 0.1.3
+Date: 2013-11-18
 License: GPL-2
 Title: Get energy data from the UK Dept of Energy and Climate Change
 Description: decctools provides functions for retrieving energy
@@ -11,12 +12,11 @@ Description: decctools provides functions for retrieving energy
     total final energy consumption statistics at the local authority, MSOA,
     and LSOA geographies.  Methods for calculating the generation mix of
     grid electricity and its associated carbon intensity are also provided.
-Date: 2013-11-18
 Depends:
+    XLConnect
+Imports:
     stringr,
-    XLConnect,
     XML,
-    lubridate,
     reshape2,
     RCurl,
     plyr
