@@ -7,3 +7,9 @@ export(get_MSOA_population)
 export(get_grid_carbon)
 export(get_grid_mix)
 export(get_lookup_table)
+import(RCurl)
+import(XLConnect)
+import(XML)
+import(plyr)
+import(reshape2)
+import(stringr)
