@@ -19,6 +19,7 @@
 #' }
 #' # Gets energy data for electricity and gas use in the domestic sector in the most recent year
 #' # This example requires a working internet connection
+#' library(RCurl)
 #' if (url.exists("http://www.google.com")) {
 #'   df <- get_LAD_data(sector="domestic", fuel=c("electricity", "gas"))
 #' }
@@ -85,6 +86,7 @@ get_LAD_data <- function(id, year, sector='total', fuel='total', dir) {
 #' @param wb the workbook to search
 #' @param unit the measurement unit of interest.  Defaults to GWh
 #' @return a vector of years with data in the spreadsheet
+#' @import stringr
 get_valid_years <- function(wb, unit="GWh") {
   
   ## Get a list of the sheets
@@ -105,7 +107,8 @@ get_valid_years <- function(wb, unit="GWh") {
 #' @param df the raw DECC data frame from the spreadsheet
 #' @param sector the sector to extract
 #' @param fuel the fuels to extract
-#' @return a long database
+#' @return a long database with headers by sector and fuel
+#' @import reshape2
 clean_decc_data <- function(df, sector, fuel) {
 
   ## Manually define the column names
