@@ -41,6 +41,7 @@ lad_data <- get_LAD_data()
 }
 # Gets energy data for electricity and gas use in the domestic sector in the most recent year
 # This example requires a working internet connection
+library(RCurl)
 if (url.exists("http://www.google.com")) {
   df <- get_LAD_data(sector="domestic", fuel=c("electricity", "gas"))
 }
