@@ -49,6 +49,7 @@
 # These require a working internet connection
 start <- "2010-01-01"
 end <- "2010-01-07"
+library(RCurl)
 if (url.exists("http://www.google.com")) {
   data <- get_grid_mix(start, end) # Gets data for 1st week of January 2010
 }
