@@ -4,6 +4,8 @@ decctools 0.1.3
 * Disabled curl's validation of SSL certificate to pass CRAN (Windows) checks.
   Not ideal but I can't reproduce the problem on my Windows machine. 
 
+* Converted Depends statements to Imports
+
 decctools 0.1.2
 ---------------
 
